<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_my_circle_crop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1.5"
                android:background="@color/color_d6d7d7"
                android:padding="5dp"
                android:text="@string/my_circle_crop"
                android:textAllCaps="false"
                android:textColor="@color/color_000000"
                android:textSize="16sp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:layout_marginRight="10dp"
                android:id="@+id/btn_blur_transformations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_d6d7d7"
                android:padding="5dp"
                android:text="@string/blur_transformations"
                android:textAllCaps="false"
                android:textColor="@color/color_000000"
                android:textSize="16sp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:layout_marginRight="10dp"
                android:id="@+id/btn_grayscale_transformations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_d6d7d7"
                android:padding="5dp"
                android:text="@string/grayscale_transformations"
                android:textAllCaps="false"
                android:textColor="@color/color_000000"
                android:textSize="16sp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/btn_combination_transformations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:background="@color/color_d6d7d7"
                android:padding="5dp"
                android:text="@string/combination_transformations"
                android:textAllCaps="false"
                android:textColor="@color/color_000000"
                android:textSize="16sp"
                tools:ignore="ButtonStyle"/>

        </LinearLayout>


        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"/>
    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>
